force-app/main/default/objects/Account_Plan_AS_Fee__c/Account_Plan_AS_Fee__c.object-meta.xml
<CustomObject>
    <label>Account Plan AS Fee</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Plan AS Fee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Plan AS Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>