force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/Account_Plan_Wallet__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Wallet__c</fullName>
    <description>Account Plan Wallet</description>
    <inlineHelpText>Account Plan Wallet</inlineHelpText>
    <label>Account Plan Wallet</label>
    <referenceTo>AcctPlanWallet__c</referenceTo>
    <relationshipLabel>Account Plan AS Fees</relationshipLabel>
    <relationshipName>Account_Plan_AS_Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>