force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/AS_Product_Service__c.field-meta.xml
<CustomField>
    <fullName>AS_Product_Service__c</fullName>
    <description>AS Product/Service</description>
    <inlineHelpText>AS Product/Service</inlineHelpText>
    <label>AS Product/Service</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1) Custodian</fullName>
            </value>
            <value>
                <fullName>2) Fund Supervisory</fullName>
            </value>
            <value>
                <fullName>3) Middle Office</fullName>
            </value>
            <value>
                <fullName>4) Agency Service</fullName>
            </value>
            <value>
                <fullName>5) Registrar &amp; Payment Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>