force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/Fixed_AS_Fee__c.field-meta.xml
<CustomField>
    <fullName>Fixed_AS_Fee__c</fullName>
    <description>Fixed AS Fee</description>
    <inlineHelpText>Fixed AS Fee</inlineHelpText>
    <label>Fixed AS Fee (Yearly: THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>