force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/Net_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Asset_Value__c</fullName>
    <description>Net Asset Value (NAV)</description>
    <inlineHelpText>Net Asset Value (NAV)</inlineHelpText>
    <label>Net Asset Value (NAV) (THB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>