force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/SEQ__c.field-meta.xml
<CustomField>
    <fullName>SEQ__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SEQ</label>
    <length>2</length>
    <type>Text</type>
</CustomField>