force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/Type_of_Fee__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Fee__c</fullName>
    <description>Type of Fee</description>
    <inlineHelpText>Type of Fee</inlineHelpText>
    <label>Type of Fee</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>