force-app/main/default/objects/Account_Plan_AS_Fee__c/fields/Wallet_AS_Fee__c.field-meta.xml
<CustomField>
    <fullName>Wallet_AS_Fee__c</fullName>
    <description>Wallet AS Fee</description>
    <formula>IF(ISPICKVAL( Type_of_Fee__c ,&apos;Percent&apos;),Net_Asset_Value__c * AS_Fee__c, Fixed_AS_Fee__c )</formula>
    <inlineHelpText>Wallet AS Fee</inlineHelpText>
    <label>Wallet AS Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>